--- a/public_html/index.html
+++ b/public_html/index.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
+        <title>Pi Site Portfolio</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
 
@@ -37,11 +37,14 @@
             <iframe src="MattTopNavBar/MattTopNavBar.html">If you see this your Browser does not support iframes.</iframe>
         </div>
         
-        <div style="position:absolute;left:30%;top:300px;font-size: 32px">
-            <a class="waves-effect waves-light btn-large">Button</a>
+        <!-- Matt's Button to play with as he likes -->
+        <div style="position:absolute;left:15%;top:300px;font-size: 32px">
+            <a href="MattHomePage/MattHomePage.html" class="myButtonMatt">To Matt's Home Page</a>
         </div>
+        
+        <!-- Raven's button to play with as she likes -->
         <div style="position:absolute;left:60%;top:300px;font-size: 32px">
-            <a class="waves-effect waves-light btn-large">Button</a>
+            <a href="RavenHomePage/RavenHomePage.html" class="myButtonRaven">To Raven's Home Page</a>
         </div>
         <!-- End of own site content -->
 
