--- a/public_html/MattTopNavBar/MattTopNavBar.html
+++ b/public_html/MattTopNavBar/MattTopNavBar.html
@@ -8,7 +8,6 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title></title>
         <meta name="description" content="">
-        <meta name="viewport" content="width=device-width">
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
         
@@ -38,17 +37,19 @@
                     </ul>
                 </li>
                 <li>
-                    <a id="MattsButton" href="../MattHomePage/MattHomePage.html">Matt's Projects</a>
+                    <a id="MattsButton" href="../MattServerNetwork/MattServerNetwork.html">Hardware Projects</a>
                     <ul>
-                        <li><a id="PlaceholderB" href="../index.html">Matt's Gaming Blog</a></li>
-                        <li><a id="PlaceholderC" href="../index.html">Subnav Item</a></li>
+                        <li><a id="PlaceholderB" href="http://www.medievalmatt.com/">Gaming Blog</a></li>
+                        <li><a id="PlaceholderC" href="../MattServerNetwork/MattServerNetwork.html">Servers/Networking</a></li>
                     </ul>
                 </li>
                 <li>
-                    <a id="RavensButton" href="../index.html">Raven's Button</a>
+                    <a id="RavensButton" href="../index.html">Code Examples</a>
                     <ul>
-                        <li><a id="PlaceholderD" href="../index.html">Subnav Item</a></li>
-                        <li><a id="PlaceholderE" href="../index.html">Subnav Item</a></li>
+                        <li><a id="PlaceholderD" href="../index.html">C/C++</a></li>
+                        <li><a id="PlaceholderE" href="../index.html">Java/JavaScript</a></li>
+                        <li><a id="PlaceholderF" href="../index.html">HTML/CSS</a></li>
+                        <li><a id="PlaceholderG" href="../index.html">PHP/SQL</a></li>
                     </ul>
                 </li>
             </ul>
