Server/Hardware page continued development

--- a/public_html/MattServerNetwork/MattServerNetwork.html
+++ b/public_html/MattServerNetwork/MattServerNetwork.html
@@ -77,8 +77,31 @@ and open the template in the editor.
                                     <td class="ColumnTabe"><strong>Purpose:</strong> The Windows server acts as a media server for movies and TV shows, as well as a mumble server and backup web server.</td>
                                 </tr>
                                 <tr class="RowTab">
-                                    <td class="ColumnTabe"></td>
-                                    <td class="ColumnTabe"></td>
+                                    <td class="ColumnTabe"><strong>Operating System:</strong> Rasbian Linux Distro</td>
+                                    <td class="ColumnTabe"><strong>Operating System:</strong> Windows 10 Home</td>
+                                </tr>
+                                <tr class="RowTab">
+                                    <td class="ColumnTabe"><strong>Hardware:</strong> Raspberry Pi 2 Model B</td>
+                                    <td class="ColumnTabe">
+                                        <strong>Hardware:</strong><br>
+                                        Custom PC with the following:<br>
+                                        <strong>CPU:</strong> AMD A10-7870K Quad 3.9GHz<br>
+                                        <strong>RAM:</strong> 16GB G.Skill Ripjaw DDR 3<br>
+                                        <strong>Motherboard:</strong> Biostar A88W 3D<br>
+                                        <strong>HDD:</strong> 4X WD 2TB Heavy Duty HDD<br>
+                                        <strong>PSU:</strong> Raidmax Blackstone 700W<br>
+                                        <strong>Case:</strong> NZXT 210 S210-002 White<br>
+                                    </td>
+                                </tr>
+                                <tr class="RowTab">
+                                    <td class="ColumnTabe"><strong>Software:</strong> Basic LAMP stack</td>
+                                    <td class="ColumnTabe">
+                                        <strong>Software:</strong><br>
+                                        Basic WAMP stack for Pi backup<br>
+                                        Plex Media Server<br>
+                                        Mumble Server<br>
+                                        VNC Server for Remote access<br>
+                                    </td>
                                 </tr>
                                 <!--<tr class="RowTab">
                                     <td class="ColumnTabe"></td>
@@ -96,7 +119,33 @@ and open the template in the editor.
                     </div>
                     <div id="collapse2" class="panel-collapse collapse">
                         <div class="panel-body">
-                            <p>As many as you need to wash you out from my mind and out of my consciousness.</p>
+                            <p>Currently I maintain an active fleet of 3 custom PCs.</p>
+                            <p>They are listed below in order of Most -> Least Powerful:</p>
+                            <p><strong>Matt's Workhorse:</strong><br></p>
+                            <p class="indented"><strong>Case:</strong> Raidmax Agusta ATX-605BT Full Tower Case</p>
+                            <p class="indented"><strong>PSU:</strong> XFX ProSeries P1-1250-BEFX 1250 Watt PSU</p>
+                            <p class="indented"><strong>GPU:</strong> Sapphire Tri-X OC Radeon R9 290X 4GB GDDR5 GPU</p>
+                            <p class="indented"><strong>CPU:</strong> AMD FX-8320 Vischera 8-Core 3.5Ghz AM3+ CPU</p>
+                            <p class="indented"><strong>CPU Cooler:</strong> Corsiar H100i Extreme Liquid Cooler</p>
+                            <p class="indented"><strong>HDD:</strong> 1X Toshiba 3TB HDD, 1X WD 2TB Heavy Duty HDD</p>
+                            <p class="indented"><strong>SSD:</strong> Samsung 840 ProSeries 128GB SSD</p>
+                            <p class="indented"><strong>RAM:</strong> 16GB Corsiar Vengeance LP 1600 DDR3</p>
+                            <p class="indented"><strong>Motherboard:</strong> ASUS Sabertooth 990FX R2.0 AM3+ ATX</p>
+                            <p class="indented"><strong>Its Purpose:</strong> This PC is used for heavy gaming, development of any kind, and video/audio transcoding and encoding.</p>
+                            <br>
+                            <p><strong>Raven's Workhorse:</strong><br></p>
+                            <p class="indented"><strong>Case:</strong></p>
+                            <p class="indented"><strong>PSU:</strong></p>
+                            <p class="indented"><strong>GPU:</strong></p>
+                            <p class="indented"><strong>CPU:</strong></p>
+                            <p class="indented"><strong>CPU Cooler:</strong></p>
+                            <p class="indented"><strong>HDD:</strong></p>
+                            <p class="indented"><strong>SSD:</strong></p>
+                            <p class="indented"><strong>RAM:</strong></p>
+                            <p class="indented"><strong>Motherboard:</strong></p>
+                            <p class="indented"><strong>Its Purpose:</strong></p>
+                            
+                            <p class="indented"><strong></strong></p>
                         </div>
                     </div>
                 </div>
