Finished Server/Hardware page. Began work on the code examples pages.

--- a/public_html/MattServerNetwork/MattServerNetwork.html
+++ b/public_html/MattServerNetwork/MattServerNetwork.html
@@ -63,7 +63,7 @@ and open the template in the editor.
                             <a data-toggle="collapse" data-parent="#accordion" href="#collapse1" class="headings">Servers</a>
                         </h4>
                     </div>
-                    <div id="collapse1" class="panel-collapse collapse in">
+                    <div id="collapse1" class="panel-collapse collapse">
                         <div class="panel-body">
                             <p>Currently I have two dedicated servers for different purposes.</p>
                             <p>The vital information for both Servers is listed below:</p>
@@ -134,18 +134,25 @@ and open the template in the editor.
                             <p class="indented"><strong>Its Purpose:</strong> This PC is used for heavy gaming, development of any kind, and video/audio transcoding and encoding.</p>
                             <br>
                             <p><strong>Raven's Workhorse:</strong><br></p>
-                            <p class="indented"><strong>Case:</strong></p>
-                            <p class="indented"><strong>PSU:</strong></p>
-                            <p class="indented"><strong>GPU:</strong></p>
-                            <p class="indented"><strong>CPU:</strong></p>
-                            <p class="indented"><strong>CPU Cooler:</strong></p>
-                            <p class="indented"><strong>HDD:</strong></p>
-                            <p class="indented"><strong>SSD:</strong></p>
-                            <p class="indented"><strong>RAM:</strong></p>
-                            <p class="indented"><strong>Motherboard:</strong></p>
-                            <p class="indented"><strong>Its Purpose:</strong></p>
-                            
-                            <p class="indented"><strong></strong></p>
+                            <p class="indented"><strong>Case:</strong> NZXT CA-S22W-B1 Black Steel Mid Tower Case</p>
+                            <p class="indented"><strong>PSU:</strong> EVGA 100-B1 500Watt PSU</p>
+                            <p class="indented"><strong>GPU:</strong> PowerColor Radeon R7 370 4GB GDDR5 GPU</p>
+                            <p class="indented"><strong>CPU:</strong> AMD FX-8320 Vischera 8-Core 3.5GHz AM3+ CPU</p>
+                            <p class="indented"><strong>CPU Cooler:</strong> Corsiar H105 Extreme Liquid Cooler</p>
+                            <p class="indented"><strong>HDD:</strong> WD Blue 500GB Desktop Drive</p>
+                            <p class="indented"><strong>SSD:</strong> ADATA Premier 120GB SSD</p>
+                            <p class="indented"><strong>RAM:</strong> 16GB G.Skill Ares Series DDR3 SDRAM</p>
+                            <p class="indented"><strong>Motherboard:</strong> ASUS M5A97 Plus AM3+ 970 ATX</p>
+                            <p class="indented"><strong>Its Purpose:</strong> This PC is used for light gameing, some development work, and as a basic daily driver for my wife.</p>
+                            <br>
+                            <p><strong>Media Server:</strong><br></p>
+                            <p class="indented"><strong>Case:</strong> NZXT Source 210 S210-002 White Mid Tower Case</p>
+                            <p class="indented"><strong>PSU:</strong> Raidmax Blackeston RX700AC 700Watt PSU</p>
+                            <p class="indented"><strong>APU:</strong> AMD A10-7870K Godavari 4-Core 3.9GHz FM2+ APU</p>
+                            <p class="indented"><strong>HDD:</strong> 6X WD Enterprise Black 2TB HDD</p>
+                            <p class="indented"><strong>RAM:</strong> 16GB G.Skill Ripjaws DDR3 SDRAM</p>
+                            <p class="indented"><strong>Motherboard:</strong> Biostar Hi-Fi A88W 3D FM2+ ATX</p>
+                            <p class="indented"><strong>Its Purpose:</strong> A media serving powerhouse.  Holds a massive digitized library of all our physical movies and TV shows to be played on our network.</p>
                         </div>
                     </div>
                 </div>
@@ -157,7 +164,16 @@ and open the template in the editor.
                     </div>
                     <div id="collapse3" class="panel-collapse collapse">
                         <div class="panel-body">
-                            <p>As many as you need to wash you out from my mind and out of my consciousness.</p>
+                            <p>Currently, my home network consists of a modem, and 2 routers servers a switch nodes.</p>
+                            <br>
+                            <p><strong>Modem:</strong><br></p>
+                            <p class="indented">2 currently used and active ports.  Both feeding to the router/switches for additional functionality.</p>
+                            <br>
+                            <p><strong>Router 1:</strong><br></p>
+                            <p class="indented">Serves as the main wireless hub and primary LAN connection point for the network.  This works to reduce lag time between internetwork devices.  The media server, my pc, my wife's pc, and our 8 Wi-Fi devices all run through this node.</p>
+                            <br>
+                            <p><strong>Router 2:</strong><br></p>
+                            <p class="indented">Due to not having gigbit LAN support, this router currently only plays host to the webserver, however it has Wi-Fi capabilities and additional ports so expansion is possible if needed.</p>
                         </div>
                     </div>
                 </div>
