--- a/public_html/MattTopNavBar/MattTopNavBar.html
+++ b/public_html/MattTopNavBar/MattTopNavBar.html
@@ -44,7 +44,7 @@
                     </ul>
                 </li>
                 <li>
-                    <a id="RavensButton" href="../index.html">Code Examples</a>
+                    <a id="RavensButton" href="../MattCodeExamples/MattCodeExamples.html">Code Examples</a>
                     <ul>
                         <li><a id="PlaceholderD" href="../index.html">C/C++</a></li>
                         <li><a id="PlaceholderE" href="../index.html">Java/JavaScript</a></li>
