Added pages for Code examples and laid in basic boilerplate

--- a/public_html/MattCodeExamples/MattCodeExamples.html
+++ b/public_html/MattCodeExamples/MattCodeExamples.html
@@ -22,22 +22,25 @@ and open the template in the editor.
         </div>
         <img class="bannerimgA" src="../img/MattCodeExamples/code.png"/>
         <div class="Main">
-            <nav class="nav" >
+            <nav class="nav">
                 <ul>
                     <li>
-                        <a id="CPP" href="#">C/C++</a>
+                        <a id="CPP" href="CandCPP/CandCPP.html">C/C++</a>
                     </li>
                     <li>
-                        <a id="Java" href="#">Java/JavaScript</a>
+                        <a id="Java" href="JavaAndJavaScript/JavaAndJavaScript.html">Java/JavaScript</a>
                     </li>
                     <li>
-                        <a id="html" href="#">HTML/CSS</a>
+                        <a id="html" href="HTMLandCSS/HTMLandCSS.html">HTML/CSS</a>
                     </li>
                     <li>
-                        <a id="php" href="#">PHP/SQL</a>
+                        <a id="php" href="PHPandSQL/PHPandSQL.html">PHP/SQL</a>
                     </li>
                 </ul>
             </nav>
+            <p>
+                The above buttons will take you to pages displaying examples of programs that I have created.
+            </p>
         </div>
     </body>
 </html>
