--- a/public_html/MattTopNavBar/MattTopNavBar.html
+++ b/public_html/MattTopNavBar/MattTopNavBar.html
@@ -46,10 +46,10 @@
                 <li>
                     <a id="RavensButton" href="../MattCodeExamples/MattCodeExamples.html">Code Examples</a>
                     <ul>
-                        <li><a id="PlaceholderD" href="../index.html">C/C++</a></li>
-                        <li><a id="PlaceholderE" href="../index.html">Java/JavaScript</a></li>
-                        <li><a id="PlaceholderF" href="../index.html">HTML/CSS</a></li>
-                        <li><a id="PlaceholderG" href="../index.html">PHP/SQL</a></li>
+                        <li><a id="PlaceholderD" href="../MattCodeExamples/CandCPP/CandCPP.html">C/C++</a></li>
+                        <li><a id="PlaceholderE" href="../MattCodeExamples/JavaAndJavaScript/JavaAndJavaScript.html">Java/JavaScript</a></li>
+                        <li><a id="PlaceholderF" href="../MattCodeExamples/HTMLandCSS/HTMLandCSS.html">HTML/CSS</a></li>
+                        <li><a id="PlaceholderG" href="../MattCodeExamples/PHPandSQL/PHPandSQL.html">PHP/SQL</a></li>
                     </ul>
                 </li>
             </ul>
